test/de.cau.cs.kieler.klighd.test/sizeEstimationTests/failing/gridPlacement02.kgt
KNode {
	children
	KNode {
		data:
		Rectangle {
			childPlacement:
			gridPlacement 2
			children:
			RoundedRectangle 10.0 10.0 {
				placementData:
				GridPlacementData {
					topLeft
					left 10.0 0.0 / top 10.0 0.0
					bottomRight
					right 10.0 0.0 / bottom 10.0 0.0
				}
				childPlacement:
				gridPlacement 1
				children:
				RenderingRef "//@children.0/@data.1" RenderingRef "//@children.0/@data.1"
				Text Hugo {
					placementData:
					GridPlacementData {
						minCellWidth 45.0 minCellHeight 31.0
						topLeft
						left 10.0 0.0 / top 10.0 0.0
						bottomRight
						right 10.0 0.0 / bottom 10.0 0.0
					}
					mapProperties:
					"klighd.testing.height" = "11.0"
					"klighd.testing.width" = "25.0"
				}
			}
			RoundedRectangle 10.0 10.0 {
				placementData:
				GridPlacementData {
					topLeft
					left 10.0 0.0 / top 10.0 0.0
					bottomRight
					right 10.0 0.0 / bottom 10.0 0.0
				}
				childPlacement:
				gridPlacement 1
				children:
				Text Hugo {
					placementData:
					GridPlacementData {
						minCellWidth 45.0 minCellHeight 31.0
						topLeft
						left 10.0 0.0 / top 10.0 0.0
						bottomRight
						right 10.0 0.0 / bottom 10.0 0.0
					}
					mapProperties:
					"klighd.testing.height" = "11.0"
					"klighd.testing.width" = "25.0"
				}
				Text Hugo {
					placementData:
					GridPlacementData {
						minCellWidth 45.0 minCellHeight 31.0
						topLeft
						left 10.0 0.0 / top 10.0 0.0
						bottomRight
						right 10.0 0.0 / bottom 10.0 0.0
					}
					mapProperties:
					"klighd.testing.height" = "11.0"
					"klighd.testing.width" = "25.0"
				}
				Text Hugo {
					placementData:
					GridPlacementData {
						minCellWidth 45.0 minCellHeight 31.0
						topLeft
						left 10.0 0.0 / top 10.0 0.0
						bottomRight
						right 10.0 0.0 / bottom 10.0 0.0
					}
					mapProperties:
					"klighd.testing.height" = "11.0"
					"klighd.testing.width" = "25.0"
				}
			}
		}
		Text Hugo {
			placementData:
			GridPlacementData {
				topLeft
				left 10.0 0.0 / top 10.0 0.0
				bottomRight
				right 10.0 0.0 / bottom 10.0 0.0
			}
		}
		KShapeLayout {
			mapProperties:
			"klighd.testing.expected.height" = "113.0"
			"klighd.testing.expected.width" = "130.0"
		}
	}
}